package de.darthkali.hexagonal.application.port.out

interface PizzaRepository {
}