package de.darthkali.hexagonal.application.services

class OrderPizzaService {
}