package de.darthkali.hexagonal.application.services

class TrackOrderService {
}